# validation-demo

./: .gitignore  pyproject.toml
src/: app.py  entities.py  schemas.py  services.py
