[tool.poetry]
name = "validation"
version = "0.1.0"
description = ""
authors = ["Ivan Goncharuk <mc.ferden@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
marshmallow = "^3.6.1"
pydantic = "^1.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
